--- a/hwb5.2-gmail/assets/css/styles.css
+++ b/hwb5.2-gmail/assets/css/styles.css
@@ -42,9 +42,9 @@
     height: 640px;
     margin-left: 30px;
     margin-top: 40px;
-    background-color: rgb(245, 245, 245);
     border-radius: 2%;
     z-index: 9999999;
+    border-style:groove ;
 }
 
 h2{
@@ -85,6 +85,24 @@ h2{
     margin-top: 58px;
     margin-left: 37px;
     border-radius: 2%;
+    display: flex;
+    position: relative;
+}
+
+.p4{
+    background-color: white;
+    color: gray;
+    width: 55px;
+    display: flex;
+    position: absolute;
+    top: -6px;
+    left: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
+
+.b1{
+    color: white;
 }
 
 #select{
@@ -137,8 +155,7 @@ h3{
 }
 
 .box-10{
-    background-color: rgb(245, 245, 245);
-    width: 400px;
+    width: 380px;
     height: 400px;
 }
 
@@ -158,7 +175,6 @@ h1{
 .icon{
     margin-left: 52px;
     display: flex;
-    
 }
 
 .box-11{
